<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNum"
        app:layout_constraintBottom_toBottomOf="@+id/image_layout"
        app:layout_constraintEnd_toStartOf="@+id/image_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_layout" />

    <ImageView
        android:id="@+id/image_layout"
        android:layout_width="78dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/tvImage_Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/tvTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTitre"
        app:layout_constraintBottom_toBottomOf="@+id/image_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_layout"
        app:layout_constraintTop_toTopOf="@+id/image_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>